fixed images on safari

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -23,6 +23,10 @@ h3 {
   @apply text-2xl font-bold mb-3;
 }
 
+img {
+  height: 100%;
+}
+
 h1, h2, h3 {
   @apply uppercase
 }
